Do not crash if we cannot open vmstat

BUG:263853